# anicca

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md
fixtures/: pet-store-changed.json  pet-store-changed.yaml  pet-store.json  pet-store.yaml  request_body.yaml  request_body_property_removed.yaml  schema.json
src/: lib.rs  operations.rs  path_items.rs  paths.rs
src/cli/: diff.rs  docs.rs  markdown.rs  mod.rs
src/cli/formatters/markdown/: extensions.rs  meta.rs  mod.rs  operations.rs  parameters.rs  paths.rs  request_body.rs  responses.rs  schema.rs
src/diff/: common.rs  content.rs  extensions.rs  info.rs  media_type.rs  mod.rs  operations.rs  parameter.rs  parameters.rs  path_items.rs  paths.rs  request_body.rs  response.rs  responses.rs  schema.rs  servers.rs
src/json_ref/: mod.rs  uri_utils.rs
src/openapi/: components.rs  document.rs  documentation.rs  examples.rs  info.rs  media_type.rs  mod.rs  operation.rs  parameter.rs  paths.rs  request_body.rs  responses.rs  schema.rs  security.rs  server.rs
