[package]
name = "anicca"
description = "Libary and CLI to diff two OpenAPI description documents"
version = "0.1.0"
authors = ["xuorig <mgiroux0@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
repository = "https://github.com/xuorig/heraclitus/"
readme = "README.md"
keywords = ["OpenAPI", "Swagger"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
clap = "2.3"
serde = { version = "1.0", features = ["derive"] }
